# Narimanov-2077

./: .gitignore  CODEX.md  Dockerfile  README.md  extract_openapi.py  openapi.json  pyproject.toml  render.yaml  requirements.txt
Comment AI/: index.html  main.py
data/: containers_registry.json  fleet_vehicles.json  weather_data.json  zone_demographics.json
smartwave_ai/: __init__.py  app.py  database.py
smartwave_ai/fleet_route_optimization/: __init__.py  api.py  config.py  geo.py  models.py  osrm_client.py  repository.py  service.py
smartwave_ai/multi_report_validation/: __init__.py  api.py  config.py  models.py  repository.py  service.py
smartwave_ai/predictive_analytics/: __init__.py  api.py  calendar.py  config.py  models.py  repository.py  service.py
smartwave_ai/static/: index.html
smartwave_ai/visual_analysis/: __init__.py  api.py  audit.py  config.py  geometry.py  inference.py  models.py  registry.py  service.py
smartwave_ai/worker_authentication/: __init__.py  api.py  config.py  jwt.py  models.py  repository.py  service.py
tests/: test_fleet_route_optimization.py  test_multi_report_validation.py  test_predictive_analytics.py  test_visual_analysis.py  test_worker_authentication.py
