[project]
name = "smartwave-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "numpy",
  "pillow",
  "pydantic",
  "uvicorn"
]

[project.optional-dependencies]
yolo = ["ultralytics"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
